Improve windows compatibility